# code-from-stream

1/: README.md
1/src/: cbuf.c
1/src/cbuf/: cbuf.h
1/src/heartbeat/: heartbeat.c  heartbeat.h  safe_state.h
1/test/cbuf/: CMakeLists.txt  test.cpp
1/test/heartbeat/: CMakeLists.txt  test.cpp
16/: README.md
16/blink/: CMakeLists.txt
16/blink/src/: FreeRTOSConfig.h  freertos_hooks.c  main.c  rtos_wrappers.h
16/blink/src/code/: blink_task.c  blink_task.h
16/blink/src/utils/: platform_specific.h
16/queue/: CMakeLists.txt
16/queue/src/: main.c
16/queue/src/code/buttons/: buttons_task.c  buttons_task.h
16/queue/src/code/motor/: motor_task.c  motor_task.h
16/template/: CMakeLists.txt
16/template/src/: main.c
16/template/src/utils/: platform_specific.h
3/: README.md
3/cube/: .gitignore
3/cube/f4discovery/: STM32F407VGTX_FLASH.ld  f4discovery Debug.launch  f4discovery.ioc
3/stm32f4_template/: logika_systemu.txt
3/stm32f4_template/src/: CMakeLists.txt  linker.ld  main.c
3/stm32f4_template/test/classb_vars/: CMakeLists.txt  test.cpp
3/stm32f4_template/test/template/: CMakeLists.txt  test.cpp
34/libopencm3-example/: CMakeLists.txt  FreeRTOSConfig.h  main.c  syscalls.c
34/libopencm3-example/config/: Toolchain-arm-gcc.cmake  compiler_flags.cmake
35/freertos-stack/: CMakeLists.txt  linker.ld  main.c
36/class-b-cpu/: CMakeLists.txt  linker.ld  main.c  rtos_wrappers.h
36/class-b-cpu/classb/: classb_task.c  classb_task.h  cpu_runtime.S  cpu_startup.S  ram_runtime.S  ram_startup.S
36/class-b-cpu/hw/startup/: startup.S
(+5 files in other folders)
